# se-toolkit-lab-8

./: AGENTS.md  REPORT.md  docker-compose.yml  pyproject.toml
backend/src/lms_backend/routers/: items.py
lab/tasks/required/: task-1.md  task-2.md  task-3.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  client.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/: query_labs.py
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
