[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP server for observability - VictoriaLogs and VictoriaTraces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.scripts]
mcp-obs = "mcp_obs.__main__:main"